# scalar-core

./: AUTHORS.md  Cargo.toml  README.md  poseidon2_rust_params.sage  poseidon2_rust_params.sage.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust-ci.yml
apps/mobile/: README.md  pubspec.yaml
apps/mobile/android/app/: build.gradle.kts
apps/mobile/android/app/src/main/: AndroidManifest.xml
apps/mobile/android/app/src/main/kotlin/network/scalar/scalar_wallet/: MainActivity.kt
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/lib/: main.dart
apps/mobile/lib/core/theme/: app_theme.dart
apps/mobile/lib/features/setup/screens/: backup_options_screen.dart  mnemonic_display_screen.dart  phrase_display_screen.dart  phrase_generation_screen.dart  phrase_verification_screen.dart  security_foundation_screen.dart  welcome_screen.dart
apps/mobile/lib/features/wallet/screens/: dashboard_screen.dart  receive_screen.dart  send_screen.dart
apps/mobile/linux/: CMakeLists.txt
apps/mobile/linux/runner/: my_application.cc
apps/mobile/macos/Runner.xcodeproj/: project.pbxproj
apps/mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/mobile/macos/Runner/Configs/: AppInfo.xcconfig
apps/mobile/test/: widget_test.dart
apps/mobile/web/: index.html  manifest.json
apps/mobile/windows/: CMakeLists.txt
apps/mobile/windows/runner/: Runner.rc  main.cpp
crates/scalar-consensus/: Cargo.toml
crates/scalar-consensus/src/: lib.rs
crates/scalar-crypto/: Cargo.toml
crates/scalar-crypto/src/: blake3.rs  channel.rs  encryption.rs  hybrid_hash.rs  lib.rs  ml_kem.rs  poseidon2.rs  sphincs.rs
crates/scalar-emission/: Cargo.toml
crates/scalar-emission/src/: accumulator.rs  consensus.rs  epoch.rs  lib.rs  liveness.rs  manifest.rs  mint_nullifier.rs
crates/scalar-fees/: Cargo.toml
crates/scalar-fees/src/: batch.rs  floor.rs  lib.rs  padding.rs
crates/scalar-ffi/: Cargo.toml
crates/scalar-ffi/src/: lib.rs
crates/scalar-governance/: Cargo.toml
crates/scalar-governance/src/: circuit.rs  lib.rs
crates/scalar-network/: Cargo.toml
crates/scalar-network/src/: config.rs  gossip.rs  lib.rs  message.rs  onion.rs  peer_discovery.rs  routing.rs  state_machine.rs  time.rs  tor_backup.rs
crates/scalar-network/src/transport/: internet.rs  lora.rs  mod.rs  mux.rs  optimization.rs  radio.rs  tor.rs
crates/scalar-node/: Cargo.toml
crates/scalar-node/src/: api.rs  gossip.rs  lib.rs  main.rs  state_machine.rs  sybil.rs
crates/scalar-nullifier/: Cargo.toml
crates/scalar-nullifier/src/: delta_sync.rs  lib.rs  nullifier_set.rs  smt.rs
crates/scalar-stark/: Cargo.toml
crates/scalar-stark/src/: air.rs  lib.rs  prover.rs  verifier.rs
crates/scalar-stark/src/constraints/: auth.rs  commitment.rs  merkle.rs  mod.rs  nullifier.rs  value.rs
crates/scalar-stark/src/mint/: air.rs  mod.rs  prover.rs  verifier.rs
crates/scalar-wallet-core/: Cargo.toml
crates/scalar-wallet-core/src/: coin_selection.rs  hardware.rs  hw_wallet.rs  key_management.rs  lib.rs  physical_security.rs  transaction.rs
tools/circuit-bench/: Cargo.toml
tools/genesis-tool/: Cargo.toml
tools/genesis-tool/src/: main.rs
