# Cargo.toml (workspace root)
[workspace]
members = [
    "crates/scalar-crypto",
    "crates/scalar-stark",
    "crates/scalar-nullifier",
    "crates/scalar-network",
    "crates/scalar-node",
    "crates/scalar-wallet-core",
    "tools/circuit-bench",
    "tools/genesis-tool", "crates/scalar-governance", "crates/scalar-consensus", "crates/scalar-ffi",
]

resolver = "2"

[workspace.dependencies]
# Cryptographic primitives
pqcrypto-sphincsplus = "0.6"      # SPHINCS+
blake3 = "1.5"                    # BLAKE3
ml-kem = "0.2"                    # ML-KEM (FIPS 203)

# ZK Proving
winterfell = "0.9"                # STARK prover/verifier

# Data structures

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux"] }
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1"
anyhow = "1"

# WASM support
wasm-bindgen = "0.2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Berdy Wandara"]
license = "MIT OR Apache-2.0"     
rust-version = "1.82.0"
