[package]
name = "scalar-emission"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
scalar-crypto   = { path = "../scalar-crypto" }
scalar-nullifier = { path = "../scalar-nullifier" }
blake3.workspace = true
thiserror.workspace = true
