[package]
name = "scalar-network"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Dependencies ke internal crates kita
scalar-crypto = { path = "../scalar-crypto" }
scalar-nullifier = { path = "../scalar-nullifier" }
scalar-stark = { path = "../scalar-stark" }

# Eksternal dependencies untuk Networking
libp2p.workspace = true
tokio.workspace = true
thiserror.workspace = true
