[package]
name = "scalar-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
scalar-crypto = { path = "../scalar-crypto" }
scalar-nullifier = { path = "../scalar-nullifier" }
scalar-stark = { path = "../scalar-stark" }
scalar-network = { path = "../scalar-network" }

tokio.workspace = true
anyhow.workspace = true
