[package]
name = "scalar-node"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
scalar-crypto = { path = "../scalar-crypto" }
scalar-nullifier = { path = "../scalar-nullifier" }
scalar-stark = { path = "../scalar-stark" }
scalar-network = { path = "../scalar-network" }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
argon2 = "0.5.3"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
