[package]
name = "scalar-stark"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
scalar-emission = { path = "../scalar-emission" }
scalar-crypto = { path = "../scalar-crypto" }
scalar-nullifier = { path = "../scalar-nullifier" }
winterfell.workspace = true
thiserror.workspace = true
